# bnet-guard

./: .gitignore  CMakeLists.txt  COPYING  README.md  guard.cfg  mysql_create_tables.sql
CMake/Modules/: FindMYSQL.cmake
depends/bncsutil/lib/: bncsutil.lib
depends/boost/lib/: boost_filesystem-vc140-mt-1_62.lib  boost_filesystem-vc140-mt-gd-1_62.lib
guard/: bncsutilinterface.cpp  bnet.cpp  bnet.h  bnetprotocol.cpp  bnetprotocol.h  bnlsclient.cpp  bnlsprotocol.cpp  config.cpp  config.h  ghost.cpp  ghost.h  ghostdb.cpp  ghostdb.h  ghostdbmysql.cpp  ghostdbmysql.h  ghostdbsqlite.cpp  ghostdbsqlite.h  includes.h  language.cpp  language.h  md5.cpp  sha1.h  socket.cpp  socket.h  util.cpp  util.h
test/: CMakeLists.txt  test.cpp
